<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.softwareengineerandroid.davidmata.doctorsconferences.MainActivity">

    <item
        android:id="@+id/action_addConference"
        android:orderInCategory="1"
        android:title="@string/action_addConference"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_suggestConference"
        android:orderInCategory="100"
        android:title="@string/action_suggestConference"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="@string/action_logout"
        app:showAsAction="never"
        />

</menu>